# petproj2

backend/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/application/api/: main.py
backend/application/database/: client.py  database.py  develop.py
backend/application/repository/: client.py  develop.py
backend/application/router/: client.py  develop.py
backend/application/schemas/: client.py  develop.py
