[tool.poetry]
name = "webevolution"
version = "0.1.0"
description = ""
authors = ["4got10king <Aldavletshina77654@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.5"
pydantic = "^2.8.2"
phonenumbers = "^8.13.43"
sqlalchemy = "^2.0.32"
fastapi = "^0.112.0"
aiosqlite = "^0.20.0"
python-multipart = "^0.0.9"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
